altas host completed

--- a/views/addmovies.ejs
+++ b/views/addmovies.ejs
@@ -2,7 +2,7 @@
 <!-- add movies form -->
 
 <div class="container">
-    <form action="/add" method="POST">
+    <form action="/addition" method="POST">
         <div class="row">
           <div class="col">
             <label>Movie </label>
